# alterdata_transaction_api

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  tresc_zadania.txt
alembic/: env.py
app/: main.py
app/api/: auth.py  dependencies.py  health.py  reports.py  routers.py  transactions.py
app/core/: config.py  logging.py
app/db/: session.py  session2.py
app/models/: models.py
app/repositories/: repositories.py
app/schemas/: schemas.py
app/services/: services.py
csv_files/: generate_csv.py  invalid_csv.csv  large_test_data.csv  sample_csv.csv
